[tool.poetry]
name = "watchtowr_api"
version = "1.0.0"
description = "watchTowr Platform Client API SDK"
authors = ["hello@watchtowr.com"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/watchtowr/watchtowr-api-sdk"
keywords = ["watchTowr Platform Client API SDK"]
include = ["watchtowr_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
